# LPCV-2026

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: mvitv2.yaml  r2plus1d.yaml  stam.yaml  tsm.yaml  videomae.yaml  x3d.yaml
lpcv/: __init__.py  evaluation.py  submission.py  transforms.py
lpcv/cli/: __init__.py  data.py  evaluate.py  main.py  submit.py  train.py
lpcv/datasets/: __init__.py  base.py  decoder.py  info.py  precompute.py  qevd.py  utils.py
lpcv/models/: __init__.py  base.py  mvitv2.py  r2plus1d.py  stam.py  tsm.py  videomae.py  x3d.py
